--- a/Web UI/templates/registration.html
+++ b/Web UI/templates/registration.html
@@ -6,11 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registration</title>
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
+    crossorigin="anonymous">
     <link rel="stylesheet" href="../resources/css/style.css" />
   </head>
   <body>
     <div class="container">
+      <div class="alert alert-danger hide mt-5" role="alert">
+        <strong>Hello There!</strong> Server is Down.
+      </div>
       <nav class="navbar navbar-light mt-5">
         <div class="d-inline mx-auto">
           <a href="index.html" class="btn btn-outline-primary" role="button">Home</a>
@@ -48,50 +53,17 @@
           </form>
         </div>
       </div>
-      <!-- <div class="header">
-        <div class="navBar">
-          <a href="index.html">Home</a>
-          <a href="login.html">Login</a>
-        </div>
-        <h1>Registration</h1>
-      </div> -->
-      <!-- <form id="reg_form">
-        <div class="form-group">
-          <label for="name">Name</label>
-          <input type="text" id="name" />
-        </div>
-        
-        <div class="form-group">
-          <label for="username">Username</label>
-          <input type="username" id="username" />
-          <span for="error" class="alert-danger hide">Username is already available.</span>
-        </div>
-
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input type="email" id="email" />
-        </div>
-
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" id="password" />
-        </div>
-
-        <div class="form-group">
-          <label for="retype_password">Retype Password</label>
-          <input type="password" id="retype_password" />
-        </div>
-
-        <button type="submit" class="btn" id="reg_btn">Sign Up</button>
-      </form> -->
     </div>
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" 
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" 
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="../resources/js/ajaxMethods.js"></script>
     <script src="../resources/js/registration.js"></script>
   </body>
