--- a/Web UI/templates/index.html
+++ b/Web UI/templates/index.html
@@ -11,79 +11,80 @@
       crossorigin="anonymous"
     />
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
+    crossorigin="anonymous">
     <link rel="stylesheet" href="../resources/css/style.css" />
   </head>
   <body>
     <div class="container">
-      <div class="header main-header">
-        <div class="navBar">
-          <a href="login.html" id="logIn">Login</a>
-          <a href="registration.html" id="registrationLink">Registration</a>
-          <a href="login.html" id="logOut">Log Out</a>
-        </div>
+      <div class="alert alert-danger hide mt-5" role="alert">
+        <strong>Hello There!</strong> Server is Down.
       </div>
-      <div class="post-form hide" id="addPostForm">
-        <div class="header">
-          <!-- <div class="logOut">
-            <a href="login.html">Log Out</a>
-          </div> -->
-          <h1>Post a Status</h1>
+      <nav class="navbar navbar-light mt-5">
+        <div class="d-inline mx-auto">
+          <a href="index.html" class="btn btn-outline-primary" role="button">Home</a>
+          <a href="#" class="btn btn-outline-primary" role="button" id="logout">Logout</a>
+          <a href="login.html" class="btn btn-outline-primary" role="button" id="login">Login</a>
         </div>
-        <form id="post_form">
-          <div class="form-group">
-            <label for="status">Status</label>
-            <textarea rows="5" id="status_description">
-Enter Your Status</textarea
-            >
-          </div>
-          <div class="form-group">
-            <label for="privacy">Choose Privacy</label>
-            <div class="radio-form">
-              <input
-                type="radio"
-                id="public"
-                name="privacy"
-                value="public"
-                checked="checked"
-              />
-              <label for="public">Public</label>
-              <input
-                type="radio"
-                class="radio"
-                id="private"
-                name="privacy"
-                value="private"
-              />
-              <label for="private">Private</label>
+      </nav>
+      <div class="row">
+        <div class="col-6" id="main-section">
+          <div class="row">
+            <div class="col mt-5">
+              <form id="status_form" class="hide">
+                <div class="form-group">
+                  <label for="status">Status</label>
+                  <textarea class="form-control" id="status" rows="3"></textarea>
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="privacy" id="public" value="public" checked>
+                  <label class="form-check-label" for="public">Public</label>
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="privacy" id="private" value="private">
+                  <label class="form-check-label" for="private">Private</label>
+                </div>
+                <select class="form-control" id="locations">
+                </select>
+                <button type="submit" class="btn btn-primary mt-4" id="post_btn">Post</button>
+              </form>
             </div>
           </div>
-          <div class="form-group">
-            <select id="locations"></select>
+          <div class="row">
+            <div class="col mt-5" id="status_items">
+              
+            </div>
+            
           </div>
-          <button type="submit" class="btn" id="post_btn">Post</button>
-        </form>
-      </div>
-      <div class="header status-header">
-        <div class="navBar">
-          <a href="login.html">Login</a>
-          <a href="registration.html">Registration</a>
-          <a href="login.html" id="logOut">Log Out</a>
         </div>
+        <div class="col-3 ml-auto" id="active_user_section">
+          <div class="mt-5">
+            <p class="border-bottom mb-5">Active Users</p>
+            <div id="active_user_lists">
+              
+            </div>
+          </div>
+        </div>
+        
       </div>
-      <div class="header">
-        <h1>All Status</h1>
-      </div>
-      <div class="status" id="status_items"></div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js" 
+    integrity="sha512-iKDtgDyTHjAitUDdLljGhenhPwrbBfqTKWO1mkhSFH3A7blITC9MhYon6SjnMhp4o0rADGw9yAC6EW4t5a4K3g==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="../resources/js/cookie.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" 
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" 
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+    <script src="../resources/js/websocket.js"></script>
+    <script src="../resources/js/ajaxMethods.js"></script>
     <script src="../resources/js/index.js"></script>
   </body>
 </html>
