--- a/Web UI/templates/login.html
+++ b/Web UI/templates/login.html
@@ -11,6 +11,10 @@
   </head>
   <body>
     <div class="container">
+
+      <div class="alert alert-danger hide mt-5" role="alert">
+        <strong>Hello There!</strong> Server is Down.
+      </div>
       
       <nav class="navbar navbar-light mt-5">
         <div class="d-inline mx-auto">
@@ -25,51 +29,33 @@
             <div class="form-group">
               <label for="email">Email address</label>
               <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
-              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+              <small id="emailHelp" class="form-text text-muted"></small>
             </div>
             <div class="form-group">
               <label for="password">Password</label>
               <input type="password" class="form-control" id="password">
+              <small id="passwordHelp" class="form-text text-muted"></small>
             </div>
             <button type="submit" class="btn btn-primary mt-4">Submit</button>
           </form>
         </div>
       </div>
-      
-      
     </div>
-      
-    <!-- <div class="container">
-      <div class="header">
-        <div class="navBar">
-          <a href="index.html">Home</a>
-          <a href="registration.html">Registration</a>
-        </div>
-        <h1>Login</h1>
-      </div>
-      <form id="login_form">
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input type="email" id="email" />
-        </div>
-
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" id="password" />
-        </div>
-
-        <button type="submit" class="btn" id="login_btn">Login</button>
-      </form>
-    </div> -->
+    <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js" 
+    integrity="sha512-iKDtgDyTHjAitUDdLljGhenhPwrbBfqTKWO1mkhSFH3A7blITC9MhYon6SjnMhp4o0rADGw9yAC6EW4t5a4K3g==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+    <script src="../resources/js/websocket.js"></script>
     <script src="../resources/js/ajaxMethods.js"></script>
-    <script src="../resources/js/cookie.js"></script>
     <script src="../resources/js/login.js"></script>
   </body>
 </html>
